--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -24,8 +24,18 @@ a{
  100% {transform:translate(0,0) rotateY(720deg);opacity:1;margin-left:0;}
 }
 
+@include keyframes(shake) {
+    0% {transform: translateX(3px) rotate(2deg);}
+    10% {transform: translateX(-3px) rotate(-2deg);}
+    20% {transform: translateX(3px) rotate(2deg);}
+    30% {transform: translateX(-3px) rotate(-2deg);}
+    40% {transform: translateX(3px) rotate(2deg);}
+    50% {transform: translateX(-3px) rotate(-2deg);}
+    60% {transform: translateX(3px) rotate(2deg);}
+    70% {transform: translateX(-3px) rotate(-2deg);}
+    80% {transform: translateX(3px) rotate(2deg);}
+    90% {transform: translateX(-3px) rotate(-2deg);}
+    100% {transform: translateX(-3px) rotate(-2deg); }
 
-
-@media only screen and (max-width: 769px){
-	body{background:red}
 }
+
